--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       unlockQR(plays, seed);
     }
 
-    // Buttons
+    // Buttons — call serverless function to create session
     document.querySelectorAll('.amount-btn').forEach(btn => {
       btn.addEventListener('click', async () => {
         const priceId = btn.dataset.price;
@@ -63,6 +63,12 @@
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ priceId }),
         });
+
+        if (!response.ok) {
+          const error = await response.text();
+          alert('Error: ' + error);
+          return;
+        }
 
         const { id } = await response.json();
 
@@ -79,7 +85,7 @@
     if (urlParams.has('session_id')) {
       const sessionId = urlParams.get('session_id');
 
-      // Determine plays from amount (you can improve with session lookup later)
+      // Determine plays from amount (temporary — we'll improve)
       const amountStr = urlParams.get('amount') || '1.39';
       const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
       const plays = playsMap[amountStr] || 1;
