--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
     const stripe = Stripe('pk_test_51SfprM12BpOkNa2hhqFAfDqpJaCdtKCHapncnVCUNkTSNgua6gKOxX4nkgJoeebvBWFvZjuJc3ZBi1Qj5iGykt36004YAW5RUo');
 
     const SECRET = "TracReader2025!SuperSecretKey#987";
-    const machineId = '0243'; // temporary — we'll make dynamic later
+    const machineId = '0243';
 
     async function generateHMAC(message) {
       const enc = new TextEncoder();
@@ -46,14 +46,14 @@
       return Array.from(new Uint8Array(sig)).map(b => b.toString(16).padStart(2, "0")).join("");
     }
 
-    // Remember paid state
+    // Remember paid state from localStorage
     const paidData = localStorage.getItem('tracPaid');
     if (paidData) {
       const { plays, seed } = JSON.parse(paidData);
       unlockQR(plays, seed);
     }
 
-    // Buttons — call serverless function to create session
+    // Buttons - create Checkout session via serverless function
     document.querySelectorAll('.amount-btn').forEach(btn => {
       btn.addEventListener('click', async () => {
         const priceId = btn.dataset.price;
@@ -80,12 +80,11 @@
       });
     });
 
-    // Success detection (Stripe redirects back with ?session_id)
+    // Success detection (after redirect back from Stripe)
     const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.has('session_id')) {
       const sessionId = urlParams.get('session_id');
 
-      // Determine plays from amount (temporary — we'll improve)
       const amountStr = urlParams.get('amount') || '1.39';
       const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
       const plays = playsMap[amountStr] || 1;
@@ -96,7 +95,7 @@
 
       unlockQR(plays, seed);
 
-      // Clean URL
+      // Clean the URL (remove session_id)
       window.history.replaceState({}, '', window.location.pathname);
     }
 
