--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trac Reader QR</title>
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
     body { background: black; color: #FFFF00; font-family: Arial; text-align: center; padding: 40px; margin: 0; }
@@ -18,6 +19,7 @@
     #downloadBtn.unlocked { opacity: 1; }
     #downloadBtn:hover { background: #FFFF99; }
     .locked-message { font-size: 2.5em; color: #FF4444; margin: 50px 0; }
+    #checkout { height: 700px; width: 600px; margin: 20px auto; border: 2px solid #FFFF00; border-radius: 20px; }
   </style>
 </head>
 <body>
@@ -29,7 +31,11 @@
   <div id="code"></div>
   <button id="downloadBtn">Download QR to Phone</button>
 
+  <div id="checkout"></div>
+
   <script>
+    const stripe = Stripe('pk_test_51SfprM12BpOkNa2hhqFAfDqpJaCdtKCHapncnVCUNkTSNgua6gKOxX4nkgJoeebvBWFvZjuJc3ZBi1Qj5iGykt36004YAW5RUo');
+
     const SECRET = "TracReader2025!SuperSecretKey#987";
     const machineId = '0243';
     const plays = 1;
@@ -48,26 +54,43 @@
       unlockQR(seed);
     }
 
-    // Pay button — replace with your actual $1.39 Payment Link URL
-    document.getElementById('payButton').addEventListener('click', () => {
-      window.location.href = 'YOUR_STRIPE_PAYMENT_LINK_FOR_1.39_HERE?prefilled_email=&client_reference_id=' + machineId + '&success_url=' + encodeURIComponent(window.location.href + '?paid=true');
+    // Pay button
+    document.getElementById('payButton').addEventListener('click', async () => {
+      const priceId = 'price_1SgBWF12BpOkNa2hGatsvuL3'; // your $1.39 price ID
+
+      const response = await fetch('/api/create-session', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ priceId }),
+      });
+
+      if (!response.ok) {
+        const errorText = await response.text();
+        alert('Error: ' + errorText);
+        return;
+      }
+
+      const { clientSecret } = await response.json();
+
+      const checkout = await stripe.initEmbeddedCheckout({
+        clientSecret,
+      });
+
+      checkout.mount('#checkout');
+
+      checkout.on('complete', () => {
+        const seed = clientSecret.split('_secret_')[0];
+
+        localStorage.setItem('tracPaid', JSON.stringify({ plays, seed }));
+
+        unlockQR(seed);
+      });
     });
-
-    // Detect success
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get('paid') === 'true') {
-      const seed = Date.now().toString();
-
-      localStorage.setItem('tracPaid', JSON.stringify({ plays, seed }));
-
-      unlockQR(seed);
-
-      window.history.replaceState({}, '', window.location.pathname);
-    }
 
     function unlockQR(seed) {
       document.querySelector('.locked-message').style.display = 'none';
       document.getElementById('payButton').style.display = 'none';
+      document.getElementById('checkout').innerHTML = '';
 
       generateHMAC(seed).then(hash => {
         const randomId = hash.substring(0, 4).toUpperCase();
