--- a/index.html
+++ b/index.html
@@ -3,42 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trac Reader QR</title>
-  <script src="https://js.stripe.com/v3/"></script>
+  <title>QR Code</title>
   <script src="https://unpkg.com/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
     body { background: black; color: #FFFF00; font-family: Arial; text-align: center; padding: 40px; margin: 0; }
     .qr-wrapper { background: white; padding: 40px; display: inline-block; border-radius: 20px; margin: 30px 0; }
-    #qrContainer { filter: blur(12px) opacity(0.3); transition: filter 1s ease, opacity 1s ease; }
-    #qrContainer.unlocked { filter: none; opacity: 1; }
-    #code { font-size: 2em; font-weight: bold; margin: 30px 0; opacity: 0; transition: opacity 1s ease; }
-    #code.unlocked { opacity: 1; }
-    #payButton { padding: 25px 50px; font-size: 2em; background: #FFFF00; color: black; border: none; border-radius: 15px; cursor: pointer; margin: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.5); }
-    #payButton:hover { background: #FFFF99; }
-    #downloadBtn { padding: 25px 50px; font-size: 2em; background: #FFFF00; color: black; border: none; border-radius: 15px; cursor: pointer; margin: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.5); opacity: 0; transition: opacity 1s ease; }
-    #downloadBtn.unlocked { opacity: 1; }
-    #downloadBtn:hover { background: #FFFF99; }
-    .locked-message { font-size: 2.5em; color: #FF4444; margin: 50px 0; }
-    #checkout { height: 700px; width: 600px; margin: 20px auto; border: 2px solid #FFFF00; border-radius: 20px; }
+    #code { font-size: 2em; font-weight: bold; margin: 30px 0; }
+    button { padding: 25px 50px; font-size: 2em; background: #FFFF00; color: black; border: none; border-radius: 15px; cursor: pointer; margin: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.5); }
+    button:hover { background: #FFFF99; }
   </style>
 </head>
 <body>
-  <div class="locked-message">Pay $1.39 to unlock your QR code</div>
-
-  <button id="payButton">Pay $1.39 - 1 Play</button>
-
   <div class="qr-wrapper" id="qrContainer"></div>
   <div id="code"></div>
   <button id="downloadBtn">Download QR to Phone</button>
-
-  <div id="checkout"></div>
-
   <script>
-    const stripe = Stripe('pk_test_51SfprM12BpOkNa2hhqFAfDqpJaCdtKCHapncnVCUNkTSNgua6gKOxX4nkgJoeebvBWFvZjuJc3ZBi1Qj5iGykt36004YAW5RUo');
-
     const SECRET = "TracReader2025!SuperSecretKey#987";
-    const machineId = '0243';
-    const plays = 1;
 
     async function generateHMAC(message) {
       const enc = new TextEncoder();
@@ -47,74 +27,44 @@
       return Array.from(new Uint8Array(sig)).map(b => b.toString(16).padStart(2, "0")).join("");
     }
 
-    // Remember paid
-    const paidData = localStorage.getItem('tracPaid');
-    if (paidData) {
-      const { seed } = JSON.parse(paidData);
-      unlockQR(seed);
-    }
+    const urlParams = new URLSearchParams(window.location.search);
+    const sessionId = urlParams.get('session_id');
+    const amountStr = urlParams.get('amount');
+    const amount = parseFloat(amountStr);
 
-    // Pay button
-    document.getElementById('payButton').addEventListener('click', async () => {
-      const priceId = 'price_1SgBWF12BpOkNa2hGatsvuL3'; // your $1.39 price ID
+    const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
+    const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
+    const plays = playsMap[amountStr] || 0;
+    const machineId = '0243';
 
-      const response = await fetch('/api/create-session', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ priceId }),
-      });
+    // Strict validation: must have valid session_id AND exact valid amount string
+    const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
+    const isValidAmount = validAmounts.includes(amountStr);
 
-      if (!response.ok) {
-        const errorText = await response.text();
-        alert('Error: ' + errorText);
-        return;
-      }
-
-      const { clientSecret } = await response.json();
-
-      const checkout = await stripe.initEmbeddedCheckout({
-        clientSecret,
-      });
-
-      checkout.mount('#checkout');
-
-      checkout.on('complete', () => {
-        const seed = clientSecret.split('_secret_')[0];
-
-        localStorage.setItem('tracPaid', JSON.stringify({ plays, seed }));
-
-        unlockQR(seed);
-      });
-    });
-
-    function unlockQR(seed) {
-      document.querySelector('.locked-message').style.display = 'none';
-      document.getElementById('payButton').style.display = 'none';
-      document.getElementById('checkout').innerHTML = '';
-
-      generateHMAC(seed).then(hash => {
-        const randomId = hash.substring(0, 4).toUpperCase();
+    if (!isValidSession || !isValidAmount) {
+      document.getElementById("qrContainer").innerHTML = '';
+      document.getElementById('code').textContent = '';
+      document.getElementById('downloadBtn').style.display = 'none';
+    } else {
+      generateHMAC(sessionId).then(sessionHash => {
+        const randomId = sessionHash.substring(0, 4).toUpperCase();
 
         const dataToSign = `${plays}|${machineId}${randomId}`;
 
-        generateHMAC(dataToSign).then(hash2 => {
-          const shortSig = hash2.substring(0, 4).toUpperCase();
-          const code = `${plays}-${machineId}${randomId}${shortSig}`;
+        generateHMAC(dataToSign).then(hash => {
+          const shortSig = hash.substring(0, 4).toUpperCase();
+          const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
 
           document.getElementById('code').textContent = code;
           document.getElementById("qrContainer").innerHTML = "";
           new QRCode(document.getElementById("qrContainer"), {
             text: code,
-            width: 360,
-            height: 360,
+            width: 200,
+            height: 200,
             colorDark: "#000000",
             colorLight: "#FFFFFF",
             correctLevel: QRCode.CorrectLevel.H
           });
-
-          document.getElementById('qrContainer').classList.add('unlocked');
-          document.getElementById('code').classList.add('unlocked');
-          document.getElementById('downloadBtn').classList.add('unlocked');
 
           document.getElementById('downloadBtn').onclick = () => {
             const canvas = document.createElement('canvas');
