--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
 
-    // === URL CLEANING: Remove real session_id and amount immediately ===
+    // === URL CLEANING ===
     if (sessionId || amountStr) {
       const cleanUrl = window.location.pathname + 
         "?status=success" +
@@ -44,26 +44,64 @@
 
     const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const plays = playsMap[amountStr] || 0;
     const machineId = '0243';
 
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
     const isValidAmount = validAmounts.includes(amountStr);
+    const plays = playsMap[amountStr] || 0;
 
-    if (!isValidSession || !isValidAmount || plays === 0) {
-      document.getElementById("qrContainer").innerHTML = '';
-      document.getElementById('code').textContent = 'Invalid payment';
-      document.getElementById('downloadBtn').style.display = 'none';
-    } else {
+    // Try to load from sessionStorage first (for refreshes)
+    const savedCode = sessionStorage.getItem('trac_qr_code');
+
+    if (savedCode) {
+      // Refresh case: show the saved valid code
+      document.getElementById('code').textContent = savedCode;
+      document.getElementById("qrContainer").innerHTML = "";
+      new QRCode(document.getElementById("qrContainer"), {
+        text: savedCode,
+        width: 200,
+        height: 200,
+        colorDark: "#000000",
+        colorLight: "#FFFFFF",
+        correctLevel: QRCode.CorrectLevel.H
+      });
+
+      // Download button for saved code
+      document.getElementById('downloadBtn').onclick = () => {
+        const canvas = document.createElement('canvas');
+        canvas.width = 440;
+        canvas.height = 520;
+        const ctx = canvas.getContext('2d');
+        ctx.fillStyle = 'white';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        const qrCanvas = document.querySelector('#qrContainer canvas');
+        ctx.drawImage(qrCanvas, 40, 40, 360, 360);
+        ctx.fillStyle = 'black';
+        ctx.font = 'bold 30px Arial';
+        ctx.textAlign = 'center';
+        ctx.fillText(savedCode, canvas.width / 2, 460);
+        const url = canvas.toDataURL('image/png');
+        const randomSuffix = Math.random().toString(36).substring(2, 6).toUpperCase();
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = `Trac-QR-${machineId}-${playsMap[amountStr] || 'X'}plays-${randomSuffix}.png`;
+        a.click();
+      };
+
+    } else if (isValidSession && isValidAmount && plays > 0) {
+      // First load from Stripe: generate new code and save it
       generateHMAC(sessionId).then(sessionHash => {
         const randomId = sessionHash.substring(0, 4).toUpperCase();
-
         const dataToSign = `${plays}|${machineId}${randomId}`;
 
         generateHMAC(dataToSign).then(hash => {
           const shortSig = hash.substring(0, 4).toUpperCase();
           const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
 
+          // Save to sessionStorage for refreshes
+          sessionStorage.setItem('trac_qr_code', code);
+
+          // Display it
           document.getElementById('code').textContent = code;
           document.getElementById("qrContainer").innerHTML = "";
           new QRCode(document.getElementById("qrContainer"), {
@@ -97,6 +135,12 @@
           };
         });
       });
+
+    } else {
+      // Invalid access or tampering
+      document.getElementById("qrContainer").innerHTML = '';
+      document.getElementById('code').textContent = 'Invalid payment';
+      document.getElementById('downloadBtn').style.display = 'none';
     }
   </script>
 </body>
